modified the navbar and home page fixed some issues in mobile and improved readablity

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -213,3 +213,11 @@
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+.bg-gallery {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
